samples/_failures_safe/1761789848_16e3a3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6e590bdf.c: In function ‘main’:
./samples/SAFE/__tmp_6e590bdf.c:162:5: error: expected declaration or statement at end of input
  162 |     result.rows = mat1.rows;
      |     ^~~~~~
